Added reserved fileds on inventories table
