# app/Http/Requests/StoreInventoryRequest.php
@@ -23,7 +23,8 @@ class StoreInventoryRequest extends FormRequest
     {
         return [
             //
-            'quantity' => 'required|integer|min:0',
+            'quantity' => 'required|string|min:0',
+            'reserved' => 'nullable|string|min:0',
             'sku' => 'required|string|max:255',
             'item_type' => 'required|string|max:255',
             'detailed_description' => 'required|string',
@@ -40,13 +41,20 @@ class StoreInventoryRequest extends FormRequest
     public function messages(): array
     {
         return [
+
             'quantity.required' => 'יש להזין כמות',
-            'quantity.integer' => 'הכמות חייבת להיות מספר שלם',
-            'quantity.min' => 'הכמות חייבת להיות לפחות 0',
+            'quantity.string' => 'שדה כמות אינו תקין.',
+            'quantity.min' => 'שדה כמות חייב להיות לפחות 0',
+
+            'reserved.min' => 'שדה שמור חייב להיות לפחות 0.',
+            'reserved.string' => 'שדה שמור אינו תקין.',
+
             'sku.required' => 'יש להזין שדה מק"ט',
             'sku.max' => 'אורך שדה מק"ט חייב להכיל לכל היותר 255 תווים',
+
             'item_type.required' => 'יש להזין סוג פריט',
             'item_type.max' => 'אורך שדה סוג פריט חייב להיות לכל היותר 255 תווים',
+
             'detailed_description.required' => 'יש להזין תיאור מפורט',
         ];
     }
